2004-11-16  Werner Lemberg  <wl@gnu.org>

	* scripts/lilypond-book.py: The Lord has commanded me to use only
	tabs for indentation.  Your humble servant obeys.

2004-11-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm (text): Revert to file name of font if font
	has no name.  Fixes ec font selection.

	* scm/framework-svg.scm:
	* scm/output-svg.scm: New file.  TODO: figure out how to
	do character by index in font.

	* scm/output-sodipodi.scm: Remove.

	* scm/output-ps.scm (stem): Remove.

2004-11-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm (beam): New function.
	(slur): Round corners.
	(round-filled-box): Round corners.

2004-11-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-gnome.scm (beam): add function.
	(draw-line): new routine.
	(dashed-line): stub; call draw-line
	(polygon): new routine.

2004-11-15  Werner Lemberg  <wl@gnu.org>

	* Documentation/user/lilypond-book.itely: Revise section on
	lilypond-book options.
	Other minor fixes.

	* scripts/lilypond-book.py: Change indentation to 4.
	Minor formatting.

2004-11-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/system.cc (apply_tweaks): new function. Run tweaks on all
	grobs that have tweaks specced.
	
2004-11-14  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/sound-output.itexi: add code snippets for MIDI.

2004-11-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/font-metric.cc (get_indexed_char_stencil): Bugfix: get
	actual char #, not 0 based index.

	* lily/system-start-delimiter.cc (staff_brace): Start at 65.

	* mf/feta-beugel.mf: Actually start at char #65.  Add header.
	Warning: do make -C mf clean.

	* lily/context-property.cc: Compile fix.

	* scm/output-gnome.scm: Add ec-fonts-mftraced to ~/.fonts.conf.
	Grok ec-fonts, braces and dynamics.

	* scm/framework-gnome.scm (gnome-main): Register braces with pango.

2004-11-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/tweak-registration.hh: new file.
