@@ -256,9 +256,8 @@ Font_metric::get_ascii_char_stencil (int code) const
 Stencil
 Font_metric::get_indexed_char_stencil (int code) const
 {
-  SCM at = scm_list_3 (ly_symbol2scm ("char"),
-		       self_scm (),
-		       scm_int2num (index_to_ascii (code)));
+  int idx = index_to_ascii (code);
+  SCM at = scm_list_3 (ly_symbol2scm ("char"), self_scm (), scm_int2num (idx));
   Box b = get_indexed_char (code);
   return Stencil (b, at);
 }
